--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <body>
 
 <h1>aefoaefjaogij</h1>
-<p>ajeahgaorigj</p>
+<p>primal dragons</p>
 <img src="bart.jpg">
+<button onclick="crash()">funny button</button>
 
 </body>
 
