made bart the button

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <body>
 
-<h1>aefoaefjaogij</h1>
-<p>primal dragons</p>
-<button onclick="crash()">funny button</button>
-<img src="bart.jpg">
+<h1>bart</h1>
+<p>clock on the bard smipson</p>
+<button onclick="crash()"><img src="bart.jpg"></button>
+<p>better website soontm</p>
 
 </body>
 
