testing crash before unload auto, added css thingy

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <html>
 
+<script></script>
+
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-
-<h1>bart</h1>
-<p>clock on the bard smipson</p>
-<button onclick="crash()"><img src="bart.jpg"></button>
-<p>better website soontm</p>
-
+<!-- <button onclick="crash()"></button> -->
+<img src="bart.jpg">
 </body>
 
 <script src="main.js"></script>
