--- a/index.html
+++ b/index.html
@@ -2,17 +2,9 @@
 
 <html>
 
-<script></script>
-
-<head>
 <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-<!-- <button onclick="crash()"></button> -->
-<img src="bart.jpg">
-</body>
-
 <script src="main.js"></script>
+<img src="bart.jpg" onload="crash()">
+<!-- <button onclick="crash()"></button> -->
 
 </html>
