--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" href="style.css">
 <script src="main.js"></script>
-<img src="bart.jpg" onload="play_mason(); setTimeout(crash(), 2000);">
+<img src="bart.jpg" onload="play_mason(); timed_crash();">
 <!-- <button onclick="crash()"></button> -->
 
 </html>
