made dynamic resize, crash and play sound on click

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <link rel="stylesheet" href="style.css">
 
-<img src="bart.jpg">
-<!-- <button onclick="crash()"></button> -->
+<img src="bart.jpg" onclick="play_mason()" class="fill">
 <script src="main.js"></script>
 
 </html>
