--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="style.css">
 
-<img src="bart.jpg" onclick="play_mason()" class="fill">
+<img src="bart.jpg" class="fill">
 <script src="main.js"></script>
 
 </html>
