--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+
+<head>
+  <link rel="icon" type="image/x-icon" href="bart.jpg"/>
+</head>
+  
 <p>click on the bart</p>
 
 <link rel="stylesheet" href="style.css">
