--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <link rel="icon" type="image/x-icon" href="bart.jpg"/>
+  <link rel="icon" href="bart.jpg"/>
 </head>
   
 <p>click on the bart</p>
